kubernetes/workloads/kube-system/traefik-forward-auth/config/resources.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: kube-system

spec:
  forwardAuth:
    address: http://traefik-forward-auth/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: kube-system

spec:
  selector:
    app: traefik-forward-auth
  ports:
    - name: http
      port: 80
      targetPort: 4181
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - name: traefik-forward-auth
          image: ghcr.io/jordemort/traefik-forward-auth
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            capabilities:
              drop:
                - ALL
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 4181
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "10Mi"
              cpu: "50m"
          ports:
            - name: http
              containerPort: 4181
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: traefik-forward-auth
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sso.ab.hor.rent
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-forward-auth
                port:
                  name: http
  tls:
    - hosts:
        - sso.ab.hor.rent
      secretName: tls-traefik-forward-auth-ingress-http
